# python_xlsx_agent

./: .gitignore  README.md  install.cmd  pyproject.toml  start.cmd
src/xl_agent_core/: __init__.py  __main__.py
src/xl_agent_core/cli/: __init__.py  main.py
src/xl_agent_core/core/: __init__.py  contracts.py  exporters.py  formulas.py  layout.py  loader.py  mutate.py  names.py  readers.py  recalc.py  recon.py  regions.py  verify.py
src/xl_agent_core/mcp/: __init__.py  server.py
tests/: __init__.py  test_mcp_server.py  test_phase1.py  test_phase2.py
